--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="js/balle.js" charset="utf-8"></script>
     <script src="js/pad.js" charset="utf-8"></script>
     <script src="js/map.js" charset="utf-8"></script>
+    <script src="js/game.js" charset="utf-8"></script>
     <script src="js/main.js" charset="utf-8"></script>
   </body>
 </html>
